--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
-  <input type="text" class="js-input" />
+    <label><b></b>Country</b></label>
+  <input type="text" class="js-input"/>
   <ul class="countries js-list-contries"></ul>
     <script src="./index.js"></script>
   </body>
